eclipseformat and warnings correction