@@ -22,13 +22,9 @@
  */
 package com.oracle.truffle.espresso.meta;
 
-import static java.lang.reflect.Modifier.FINAL;
 import static java.lang.reflect.Modifier.PRIVATE;
 import static java.lang.reflect.Modifier.PROTECTED;
 import static java.lang.reflect.Modifier.PUBLIC;
-import static java.lang.reflect.Modifier.STATIC;
-import static java.lang.reflect.Modifier.TRANSIENT;
-import static java.lang.reflect.Modifier.VOLATILE;
 
 import java.lang.reflect.Modifier;
 
@@ -42,6 +38,14 @@ public interface ModifiersProvider {
      * Returns the modifiers for this element.
      */
     int getModifiers();
+
+    /**
+     * Since we do not have direct access to the Varargs flag, we use the transient flag (that has
+     * the same value)
+     */
+    default boolean isVarargs() {
+        return Modifier.isTransient(getModifiers());
+    }
 
     /**
      * @see Modifier#isInterface(int)
@@ -66,9 +70,7 @@ public interface ModifiersProvider {
 
     /**
      * The setting of the final modifier bit for types is somewhat confusing, so don't export
-     * isFinal by default. Subclasses like {@link ResolvedJavaField} and {@link ResolvedJavaMethod}
-     * can export it as isFinal, but {@link ResolvedJavaType} can provide a more sensible equivalent
-     * like {@link ResolvedJavaType#isLeaf}.
+     * isFinal by default.
      *
      * @see Modifier#isFinal(int)
      */
@@ -148,19 +150,4 @@ public interface ModifiersProvider {
     default boolean isConcrete() {
         return !isAbstract();
     }
-
-    /**
-     * This is removed in JDK 9 and should not be used. It used to rely on use of reflection to read
-     * non-public values from {@link Modifier}. Such cross-module (i.e., {@code jdk.vm.ci} to
-     * {@code java.base}) reflection is disabled in 9 and will require a VM option such
-     * {@code --add-exports-private} to be enabled.
-     */
-    // @Deprecated
-    static int jvmFieldModifiers() {
-        // Reflection replaced with hard coded values (which will not change in JDK 8).
-        final int accEnum = 0x4000;
-        final int accSynthethic = 0x1000;
-        return PUBLIC | PRIVATE | PROTECTED | STATIC | FINAL | VOLATILE | TRANSIENT | accEnum | accSynthethic;
-    }
-
 }
